fix(checkbox): specify letter-spacing

--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -85,6 +85,8 @@ limel-dynamic-label {
     label {
         cursor: pointer;
         line-height: normal;
+        letter-spacing: normal;
+
         padding-top: 0.75rem;
         padding-left: 0;
 
